<resources>
    <string name="app_name">LoginEdit</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="phone">手机号码</string>
    <string name="password">密码</string>
    <string name="password_old">旧密码</string>
    <string name="password_new">新密码</string>
    <string name="edit_err_phone">手机号格式错误</string>
    <string name="edit_err_password">密码位数要大于等于4</string>
</resources>
